--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" media="screen and (max-width: 800px)" href="tablet.css">
-    <link rel="stylesheet" media="screen and (max-width: 635px)" href="phone.css">
+    <link rel="stylesheet" href="style/styles.css">
+    <link rel="stylesheet" media="screen and (max-width: 800px)" href="style/tablet.css">
+    <link rel="stylesheet" media="screen and (max-width: 635px)" href="style/phone.css">
     <script src="https://kit.fontawesome.com/ee0cb277ea.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
